--- a/.github/workflows/gym.yml
+++ b/.github/workflows/gym.yml
@@ -16,17 +16,27 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
     
-    - name: Start Docker container
+    - name: Install XQuartz and socat (for macOS only)
+      if: runner.os == 'macos'
       run: |
+        brew install socat
+
+    - name: Start Docker container with X forwarding
+      run: |
+        if [ "$(uname)" == "Darwin" ]; then
+          socat TCP-LISTEN:6000,reuseaddr,fork UNIX-CLIENT:\"$DISPLAY\" &
+        fi
         docker pull jnishii/docker-gym-keras
-        CONTAINER_ID=$(docker run -d -p 8888:8888 jnishii/docker-gym-keras)
+        CONTAINER_ID=$(docker run -d -p 8888:8888 jnishii/docker-gym-keras bin/docker-run.sh -X)
         CONTAINER_IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' $CONTAINER_ID)
-        echo "::set-output name=container_ip::$CONTAINER_IP"
+        echo "container_ip=$CONTAINER_IP" >> $GITHUB_STATE
     
     - name: Wait for Docker container to start
       run: |
-        sleep 20
+        sleep 5
     
     - name: Display Jupyter Notebook URL
       run: |
-        echo "Jupyter Notebook is running at http://${{ steps.build.outputs.container_ip }}:8888"
+        CONTAINER_IP=$(cat $GITHUB_STATE | grep container_ip | cut -d'=' -f2)
+        echo "Jupyter Notebook is running at http://$CONTAINER_IP:8888"
+        echo "container_ip=http://$CONTAINER_IP:8888" >> $GITHUB_OUTPUT
