--- a/.github/workflows/gym.yml
+++ b/.github/workflows/gym.yml
@@ -27,9 +27,7 @@ jobs:
           socat TCP-LISTEN:6000,reuseaddr,fork UNIX-CLIENT:\"$DISPLAY\" &
         fi
         docker pull jnishii/docker-gym-keras
-        CONTAINER_ID=$(docker run -d -p 8888:8888 jnishii/docker-gym-keras bin/docker-run.sh -X)
-        CONTAINER_IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' $CONTAINER_ID)
-        echo "container_ip=$CONTAINER_IP" >> $GITHUB_STATE
+        docker run -d -p 8888:8888 jnishii/docker-gym-keras bin/docker-run.sh
     
     - name: Wait for Docker container to start
       run: |
@@ -37,6 +35,5 @@ jobs:
     
     - name: Display Jupyter Notebook URL
       run: |
-        CONTAINER_IP=$(cat $GITHUB_STATE | grep container_ip | cut -d'=' -f2)
+        CONTAINER_IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' $(docker ps -lq))
         echo "Jupyter Notebook is running at http://$CONTAINER_IP:8888"
-        echo "container_ip=http://$CONTAINER_IP:8888" >> $GITHUB_OUTPUT
