--- a/.github/workflows/gym.yml
+++ b/.github/workflows/gym.yml
@@ -1,44 +1,32 @@
-name: Launch Jupyter Notebook
+name: Run Jupyter Notebook
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
-  build:
+  build-and-run:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-    
-    - name: Install XQuartz and socat (for macOS only)
-      if: runner.os == 'macos'
-      run: |
-        brew install socat
 
-    - name: Clone docker-gym-keras repository
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Build Docker image
+      run: docker build . -t my-jupyter-notebook
+
+    - name: Run Docker container
       run: |
-        git clone https://github.com/jnishii/docker-gym-keras.git
-        cd docker-gym-keras
-    
-    - name: Start Docker container with X forwarding
-      run: |
-        if [ "$(uname)" == "Darwin" ]; then
-          socat TCP-LISTEN:6000,reuseaddr,fork UNIX-CLIENT:\"$DISPLAY\" &
-        fi
-        docker pull jnishii/docker-gym-keras
-        CONTAINER_ID=$(docker run -d -p 8888:8888 jnishii/docker-gym-keras bin/docker-run.sh)
-    
-    - name: Wait for Docker container to start
-      run: |
-        sleep 5
-    
-    - name: Display Jupyter Notebook URL
-      run: |
+        CONTAINER_ID=$(docker run -d -p 8888:8888 my-jupyter-notebook)
         CONTAINER_IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' $CONTAINER_ID)
-        echo "Jupyter Notebook is running at http://$CONTAINER_IP:8888"
+        NOTEBOOK_ADDRESS="http://$CONTAINER_IP:8888"
+        echo "::set-output name=notebook_address::$NOTEBOOK_ADDRESS"
+        echo "Jupyter Notebook is running at $NOTEBOOK_ADDRESS"
+
+    - name: Get notebook address
+      run: echo "Notebook address is ${{ steps.run.outputs.notebook_address }}"
+      id: run
