--- a/.github/workflows/gym.yml
+++ b/.github/workflows/gym.yml
@@ -13,6 +13,16 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Add ngrok repository and install ngrok
+      run: |
+        curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc \
+          | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null && echo "deb https://ngrok-agent.s3.amazonaws.com buster main" \
+          | sudo tee /etc/apt/sources.list.d/ngrok.list && sudo apt update && sudo apt install ngrok
+
+    - name: Add ngrok authtoken
+      run: |
+        ngrok config add-authtoken 2cjMV5h774y6ZnvXiw57YGEZmvq_MT8LUvQPpRsa3bSLTkPF
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
@@ -31,10 +41,6 @@ jobs:
       run: |
         wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip
         unzip ngrok-stable-linux-amd64.zip
-
-    - name: Add ngrok authtoken to configuration file
-      run: |
-        echo "authtoken: 2cjMV5h774y6ZnvXiw57YGEZmvq_MT8LUvQPpRsa3bSLTkPF" > $HOME/.ngrok2/ngrok.yml
 
     - name: Start ngrok
       run: ./ngrok http 8888 > ngrok.log &
