--- a/.github/workflows/gym.yml
+++ b/.github/workflows/gym.yml
@@ -50,7 +50,7 @@ jobs:
 
     - name: Get ngrok tunnel URL
       id: ngrok
-      run: echo "::set-output name=ngrok_url::$(grep -oP "http://[a-zA-Z0-9]+\.ngrok.io" ngrok.log | tail -1)"
+      run: echo "NGROK_URL=$(grep -oP "http://[a-zA-Z0-9]+\.ngrok.io" ngrok.log | tail -1)" >> $GITHUB_ENV
 
     - name: Display ngrok tunnel URL
-      run: echo "Ngrok tunnel is ${{ steps.ngrok.outputs.ngrok_url }}"
+      run: echo "Ngrok tunnel is ${{ env.NGROK_URL }}"
