--- a/.github/workflows/gym.yml
+++ b/.github/workflows/gym.yml
@@ -44,12 +44,14 @@ jobs:
 
     - name: Start ngrok
       run: ./ngrok http 8888 > ngrok.log &
-    
+
     - name: Wait for ngrok tunnel
-      run: sleep 10
+      run: sleep 20
+
+    - name: Print ngrok log
+      run: cat ngrok.log
 
     - name: Get ngrok tunnel URL
-      id: ngrok
       run: echo "NGROK_URL=$(grep -oP "http://[a-zA-Z0-9]+\.ngrok.io" ngrok.log | tail -1)" >> $GITHUB_ENV
 
     - name: Display ngrok tunnel URL
