--- a/.github/workflows/gym.yml
+++ b/.github/workflows/gym.yml
@@ -21,7 +21,7 @@ jobs:
 
     - name: Add ngrok authtoken
       run: |
-        ngrok config add-authtoken 2cjMV5h774y6ZnvXiw57YGEZmvq_MT8LUvQPpRsa3bSLTkPF
+        ngrok config add-authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1.6.0
