--- a/.github/workflows/gym.yml
+++ b/.github/workflows/gym.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Build Docker image
       run: docker build . -t my-jupyter-notebook
 
-    - name: Run Docker container
+    - name: Run Dockr container
       run: |
         CONTAINER_ID=$(docker run -d -p 8888:8888 my-jupyter-notebook)
         CONTAINER_IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' $CONTAINER_ID)
