--- a/.github/workflows/gym.yml
+++ b/.github/workflows/gym.yml
@@ -3,10 +3,10 @@ name: Run Jupyter Notebook
 on:
   push:
     branches:
-      - main  # Or any branch you want to trigger this on
+      - main
   pull_request:
     branches:
-      - main  # Or any branch you want to trigger this on
+      - main
 
 jobs:
   build:
@@ -24,14 +24,22 @@ jobs:
       - name: Install dependencies
         run: |
           pip install gym==0.25.2 h5py==3.10.0 keras==2.13.1 keras-rl2==1.0.4 Pillow==10.0.1 tensorflow==2.13.0 numpy==1.23.5 jupyter
+          
       - name: Install ngrok
         run: |
           wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip
           unzip ngrok-stable-linux-amd64.zip
           sudo mv ngrok /usr/local/bin
+          
       - name: Run Jupyter Notebook
         run: |
           mkdir notebooks
-          jupyter notebook --ip=0.0.0.0 --port=8888 --no-browser --allow-root
-          ngrok config add-authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
+          jupyter notebook --ip=0.0.0.0 --port=8888 --no-browser --allow-root &
+          sleep 5  # Wait for Jupyter Notebook to start
           ngrok http 8888
+          
+      - name: Save state
+        run: echo "JUPYTER_URL=$(ngrok http 8888)" >> $GITHUB_ENV
+      
+      - name: Set output
+        run: echo "::set-output name=JUPYTER_URL::$(ngrok http 8888)"
