--- a/.github/workflows/gym.yml
+++ b/.github/workflows/gym.yml
@@ -14,15 +14,17 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
-          python-version: 3.9
+          python-version: '3.8'
+          cache: 'pip'
       
       - name: Install dependencies
         run: |
+          pip install --upgrade pip
           pip install gym==0.18.3 h5py==3.1.0 keras==2.6.0 keras-rl2==1.0.5 Pillow==9.0.0 tensorflow==2.7.0 numpy==1.22.3 jupyter
       
       - name: Install ngrok
