--- a/.github/workflows/gym.yml
+++ b/.github/workflows/gym.yml
@@ -14,12 +14,12 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
       
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v2
         with:
-          python-version: '3.9'
+          python-version: 3.9
       
       - name: Install dependencies
         run: |
