--- a/.github/workflows/gym.yml
+++ b/.github/workflows/gym.yml
@@ -1,4 +1,4 @@
-name: Remote Jupyter Notebook
+name: Run Jupyter Notebook
 
 on:
   push:
@@ -23,26 +23,26 @@ jobs:
       
       - name: Install dependencies
         run: |
-          pip install --upgrade pip
-          pip install gym==0.18.3 h5py==3.1.0 keras==2.6.0 keras-rl2==1.0.5 Pillow==9.0.0 tensorflow==2.7.0 numpy==1.22.3 jupyter
-      
+          pip install gym==0.25.2 h5py==3.10.0 keras==2.13.1 keras-rl2==1.0.4 Pillow==10.0.1 tensorflow==2.13.0 numpy==1.23.5 jupyter
+          
       - name: Install ngrok
         run: |
-          curl -fsSL https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.tgz | tar xz -C /tmp
-          sudo mv /tmp/ngrok /usr/local/bin/ngrok
+          wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip
+          unzip ngrok-stable-linux-amd64.zip
+          sudo mv ngrok /usr/local/bin
           
       - name: Run Jupyter Notebook
         run: |
-          mkdir notebooks
-          jupyter notebook --ip=127.0.0.1 --port=8888 --no-browser --allow-root &
-          sleep 10  # Wait for Jupyter Notebook to start
-          ngrok config add-authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
-          ngrok http 8888 > /dev/null &
-          sleep 10  # Wait for ngrok to start
-          
+            mkdir notebooks
+            jupyter notebook --ip=0.0.0.0 --port=8888 --no-browser --allow-root &
+            sleep 10  # Wait for Jupyter Notebook to start
+            ngrok authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
+            ngrok http 8888 > /dev/null &
+            sleep 10  # Wait for ngrok to start
+        
       - name: Get ngrok URL
         id: ngrok
-        run: echo "::set-output name=url::$(curl -s http://localhost:4040/api/tunnels | jq -r '.tunnels[0].public_url')"
+        run: echo "url=$(curl -s http://localhost:4040/api/tunnels | jq -r '.tunnels[0].public_url')" >> $GITHUB_ENV
         
-      - name: Save ngrok URL as environment variable
-        run: echo "NGROK_URL=${{ steps.ngrok.outputs.url }}" >> $GITHUB_ENV
+      - name: Save state
+        run: echo "JUPYTER_URL=${{ env.url }}" >> $GITHUB_ENV
