--- a/.github/workflows/gym.yml
+++ b/.github/workflows/gym.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install gym==0.25.2 h5py==3.10.0 keras==2.13.1 keras-rl2==1.0.4 Pillow==10.0.1 tensorflow==2.13.0 numpy==1.23.5 jupyter
-          
+          pip install gym[atari]
       - name: Install ngrok
         run: |
           wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip
@@ -46,3 +46,7 @@ jobs:
         
       - name: Save state
         run: echo "JUPYTER_URL=${{ env.url }}" >> $GITHUB_ENV
+      - name: Display ngrok URL
+        run: echo ${{ env.JUPYTER_URL }}
+      - name: Keep the workflow running
+        run: sleep 31536000
